Allow for relative paths in mcupdate metadata